feat: complete JPA data layer with entities and repositories for products, categories, users, and transactions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=Inventory Dashboard
-spring.datasource.url=jdbc:postgresql://localhost:5432/enterprise_inventory
+spring.application.name=StockLogic Dashboard
+spring.datasource.url=jdbc:postgresql://localhost:5432/stocklogic_inventory
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD:password}
 spring.jpa.hibernate.ddl-auto=validate
