feat: implement transactional stock updates and history logging with custom column mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=StockLogic Dashboard
 spring.datasource.url=jdbc:postgresql://localhost:5432/stocklogic_inventory
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD:password}
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
